--- a/css/style.css
+++ b/css/style.css
@@ -40,22 +40,27 @@ main h1{
     text-align: center;
 }
 main img{
-    height: 250px;
-    padding: 100px 102px;
-    width: 250px;
+    border: 5px solid black;
+border-radius: 10px;
+    height: 400px;
+    margin: 30px;
+    width: 400px;
 }
 main h2{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 30px;
     font-weight: bold;
-    padding: 0px 48px;
+    padding: 0px 32px;
     padding-bottom: 10px;
+}
+.canvas{
+    padding: 0 18px;;
 }
 main ul{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
     line-height: 1.5;
-    padding: 0px 95px;
+    padding: 25px 32px;
     text-align: justify;
     text-transform: capitalize;
 }
